--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-netlify-cms": "^3.0.9",
     "gatsby-plugin-offline": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.4",
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
+    "netlify-cms": "^2.3.1",
     "node-sass": "^4.10.0",
     "normalize.css": "^8.0.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "rfs": "^7.1.8"
+    "react-slick": "^0.23.2",
+    "rfs": "^7.1.8",
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby"
