--- a/package.json
+++ b/package.json
@@ -4,26 +4,18 @@
   "version": "1.0.0",
   "author": "Guilherme Paiva <gf.paiva@yahoo.com.br>",
   "dependencies": {
-    "gatsby": "^2.0.19",
-    "gatsby-image": "^2.0.15",
-    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby": "^2.0.73",
+    "gatsby-image": "^2.0.25",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^3.0.9",
-    "gatsby-plugin-offline": "^2.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.4",
-    "gatsby-plugin-sharp": "^2.0.7",
-    "gatsby-source-filesystem": "^2.0.4",
-    "gatsby-transformer-remark": "^2.1.15",
-    "gatsby-transformer-sharp": "^2.1.4",
+    "gatsby-plugin-react-helmet": "^3.0.4",
     "netlify-cms": "^2.3.1",
-    "node-sass": "^4.10.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-slick": "^0.23.2",
-    "rfs": "^7.1.8",
+    "rfs": "^7.1.9",
     "slick-carousel": "^1.8.1"
   },
   "keywords": [
@@ -40,7 +32,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "gatsby-plugin-manifest": "^2.0.12",
+    "gatsby-plugin-no-sourcemaps": "^2.0.1",
+    "gatsby-plugin-offline": "^2.0.20",
+    "gatsby-plugin-purgecss": "^2.4.0",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-remark": "^2.1.17",
+    "gatsby-transformer-sharp": "^2.1.9",
+    "node-sass": "^4.11.0",
+    "prettier": "^1.15.3",
+    "rimraf": "^2.6.2"
   },
   "repository": {
     "type": "git",
